# TUITemplate

./: .gitignore  CMakeLists.txt  Project  libs_dep.json  readme.md
.github/workflows/: linux.yml
include/: Application.h  DisplayInfo.h  Game.h  IInputDevice.h  RendererType.h  SystemInputDevice.h  stdafx.h
include/Components/: IComponent.h  IProgressComponent.h  ProgressComponent.h
include/Control/: GameControl.h  IGameControl.h  IInputRelay.h  InputRelay.h
include/UI/: IUIComponent.h  IUIManager.h  IWindow.h  UIContext.h  UIHelper.h  UIManager.h  UiTypes.h  WindowBase.h  WindowManager.h  visibility_flag.h
include/UI/Screens/: SplashscreenWindow.h
src/: Application.cpp  Game.cpp  SystemInputDevice.cpp  main.cpp  stdafx.cpp
src/Components/: ProgressComponent.cpp
src/Control/: GameControl.cpp  InputRelay.cpp
src/UI/: UIHelper.cpp  UIManager.cpp  WindowBase.cpp  WindowManager.cpp
src/UI/Screens/: SplashscreenWindow.cpp
